# fast-fractal-compression

./: .gitignore  Meetings.md  README.md
fic/: CMakeConfig.txt  CMakeLists.txt
fic/benchmark/: benchmark_difference_norm.cpp  benchmark_find_optimal_mappings.cpp
fic/ext/stb/: stb_image_write.h
fic/images/: source.txt
fic/include/fic/: block_store.h  blockwise_entropy.h  blockwise_sum.h  blockwise_sum_of_squares.h  blockwise_sum_of_xmuly.h  blur.h  common.h  difference_norm.h  find_optimal_mappings.h  hflip_vector.h  map_one_matrix_to_another.h  map_one_matrix_to_another_flip.h  mapping_between_two_matrices.h  mapping_between_two_matrices_flip.h  resize.h  rotate.h  rotate_vector.h  split_into_blocks.h  tsc_x86.h
fic/src/: block_store.cpp  blockwise_entropy.cpp  blockwise_sum.cpp  blockwise_sum_of_squares.cpp  blockwise_sum_of_xmuly.cpp  blur.cpp  compress.cpp  compress_fast.cpp  compress_flip.cpp  compress_flip_fast.cpp  decompress.cpp  difference_norm.cpp  find_optimal_mappings.cpp  hflip_vector.cpp  map_one_matrix_to_another.cpp  map_one_matrix_to_another_flip.cpp  mapping_between_two_matrices.cpp  mapping_between_two_matrices_flip.cpp  resize.cpp  rotate.cpp  rotate_vector.cpp  split_into_blocks.cpp  stb_image_demo.cpp
mannyray/: README.md  blockImage.cc  blockImage.h  compareImages.cc  compareImages.h
mannyray/regularFractal/: compress.cc  decompress  decompress.cc  regularFractalMapping.h
mannyray/regularFractalWithRotation/: compress.cc  decompress.cc  regularFractalMappingWithRotate.h
mannyray/sample_images/: 1024_1024.pnm
mannyray/tools/: converter.cc
test/: benchmark.py  performance.py  performance_flip.py  runtime.py  system_info_archton.json  system_info_dani.json  system_info_euler.json  system_info_michi.json  system_info_sarah.json
test/results_benchmark/: result_23.05_21_04.txt  result_23.05_21_05.txt  result_23.05_21_06.txt
test/results_performance/: result_23.05_19_19.txt  result_23.05_21_51.txt  result_merged.txt
